2013-12-12 Pedro Vicente  <pvicente@uci.edu>

	* Dimensions in hyperslabbing arguments are once again checked for 
   validity prior to processing and invalid (i.e., non-existent)
   dimensions once-again cause operators to abort.

2013-12-11  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.0 release procedure:
 	Changes since nco-4_3_9: hash, dyn. grp mmr, ncra.c fixes
	cd ~/nco;cvs tag -d nco-4_4_0;cvs tag -d nco-4_4_0-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.0 release"
	cvs tag -c nco-4_4_0;cvs tag -c nco-4_4_0-1

	* Stop writing global attributes twice in ncra.c

	* Re-enable history attribute in ncra.c

2013-12-10  Charlie Zender  <zender@uci.edu>

	* Tentative fix to mss_val/MRO bug: use mss_val from var_prc_out not var_prc in nco_opr_nrm()

	* Whitespace changes while attacking ncra mss_val/MRO bug

	* Fix ncra/ncrcat bug where extra record used when superfluous input files provided
	and stride places first index of superfluous files beyond user-specified last index.

	* Clean-up hash usage. Try different approaches prior to widespread implementation.

2013-12-10 Pedro Vicente  <pvicente@uci.edu>

	* Replace static dimensions arrays with dynamic. Causes a one order-of-magnitude speedup.

	* Limit structures are now contained in the traversal table build function
	Information about valid limit names is exported to main programs

2013-12-09  Charlie Zender  <zender@uci.edu>

	* Fix ncra/ncrcat bug where file loop exited after first record dimension completed

	* Whitespace changes while debugging MRO/DRN bug

	* Revert one-line CVS version 1.59->1.60 change in nco_omp.c committed on
	20131029 which caused many OpenMP-enabled operators to die when dbg_lvl > 2.

	* Prepare to attack ncra/ncrcat MRO/DRN bug

2013-12-09 Pedro Vicente  <pvicente@uci.edu>

	* Enable hash table lookup

2013-12-08 Pedro Vicente  <pvicente@uci.edu>

	* ncrename: Regression #22 Allow input syntax of new name as full path

2013-12-04  Charlie Zender  <zender@uci.edu>
