@@ -7,7 +7,7 @@
 
 @ignore
 
-$Header: /data/zender/nco_20150216/nco/doc/nco.texi,v 1.922 2013-12-11 06:57:02 zender Exp $
+$Header: /data/zender/nco_20150216/nco/doc/nco.texi,v 1.923 2013-12-16 23:08:09 zender Exp $
 
 Purpose: TeXInfo documentation for NCO suite
 
@@ -115,7 +115,7 @@ Octave TeXInfo manual shows clean TeXInfo structure
 @set doc-edition 4.4.0
 @set copyright-years 1995--2013
 @set update-year 2013
-@set update-date 2 December 2013
+@set update-date 16 December 2013
 @set update-month December 2013
 
 @settitle @acronym{NCO} @value{nco-edition} User Guide
@@ -15195,14 +15195,21 @@ ncrename -g g8,g20 in_grp.nc
 @cindex coordinate variables
 @command{ncrename} does not automatically attach dimensions to variables of
 the same name.
+This is done to make renaming an easy way to change whether a variable
+is a coordinate.
 If you want to rename a coordinate variable so that it remains a
 coordinate variable, you must separately rename both the dimension and
 the variable: 
 @example
 ncrename -d lon,longitude -v lon,longitude in.nc
 @end example
-Unfortunately, the netCDF library has a longstanding bug () that causes
-@acronym{NCO} to crash when performing this operation.
+Unfortunately, the netCDF4 library has a longstanding bug (all versions
+until 4.3.1-rc5 released in December, 2013) that causes @acronym{NCO} to
+crash when performing this operation. 
+Renaming variables and dimensions in netCDF4 files with earlier versions
+of netCDF must be done in two separate @command{ncrename} invocations
+(e.g., first rename the variable, then the dimension) to avoid
+triggering this bug.
 
 @cindex global attributes
 @cindex attributes, global
